--- a/BYOB/Home/TableViewCell/CategorizedExpenceCell.xib
+++ b/BYOB/Home/TableViewCell/CategorizedExpenceCell.xib
@@ -113,7 +113,7 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="131.8840579710145" y="146.31696428571428"/>
+            <point key="canvasLocation" x="112" y="132"/>
         </tableViewCell>
     </objects>
 </document>
